some_blocks-complete

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                                     <h2>Штрипс, лента оцинкованная</h2>
                                     <ul>
                                         <li>Оцинкованный штрипс </li>
-                                        <li> Оцинкованная стальная лента </span></li>
+                                        <li> Оцинкованная стальная лента</li>
                                         <li> Оцинкованная полоса Г/К </li>
                                     </ul>
                                     <div class="info-button first">
@@ -251,59 +251,61 @@
             </div>
         </div>
         <div class="form_block">
-            <div class="form_content">
-                <h1>
-                    Получите полный каталог <br>
-                    и прайс на металлопрокат
-                </h1>
-                <form action="#">
-                    <div class="form_elements">
-                        <div class="form_elements_block part_1">
-                            <label for="email">
-                                <p>Куда отправить прайс и каталог?</p>
-                            </label>
-                            <div class="form">
-                                <input type="email" id="email" class="form_input" placeholder="E-mail" required name="email">
+            <div class="form_frame">
+                <div class="form_content">
+                    <h1>
+                        Получите полный каталог <br>
+                        и прайс на металлопрокат
+                    </h1>
+                    <form action="#">
+                        <div class="form_elements">
+                            <div class="form_elements_block part_1">
+                                <label for="email">
+                                    <p>Куда отправить прайс и каталог?</p>
+                                </label>
+                                <div class="form">
+                                    <input type="email" id="email" class="form_input" placeholder="E-mail" required name="email">
+                                </div>
+                            </div>
+                            <div class="form_elements_block part_2">
+                                <p>Какую компанию вы представляете?</p>
+                                <div class="form">
+                                    <select class="form_select">
+                                        <option>Торговая компания, магазин</option>
+                                        <option>Belaruski </option>
+                                        <option>Bravo</option>
+                                        <option>Bazarstore</option>
+                                        <option>Araz Supermarket</option>
+                                    </select>
+                                </div>
                             </div>
                         </div>
-                        <div class="form_elements_block part_2">
-                            <p>Какую компанию вы представляете?</p>
-                            <div class="form">
-                                <select class="form_select">
-                                    <option>Торговая компания, магазин</option>
-                                    <option>Belaruski </option>
-                                    <option>Bravo</option>
-                                    <option>Bazarstore</option>
-                                    <option>Araz Supermarket</option>
-                                </select>
+                        <div class="form_elements elements_2">
+                            <div class="form_elements_block part_1">
+                                <label for="login">
+                                    <p>Как к вам обращаться?</p>
+                                </label>
+                                <div class="form">
+                                    <input type="uname" id="login" class="form_input" placeholder="Ваше имя" required name="login">
+                                </div>
+                            </div>
+                            <div class="form_elements_block part_2">
+                                <label for="tel">
+                                    <p>Введите телефон</p>
+                                </label>
+                                <div class="form">
+                                    <input type="tel" id="tel" class="form_input" placeholder="+ 7 ( _ _ _ ) - _ _ _ - _ _ - _ _" required name="tel" maxlength="17" pattern="\+7\s?[\(]{0,1}9[0-9]{2}[\)]{0,1}\s?\d{3}[-]{0,1}\d{2}[-]{0,1}\d{2}">
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="form_elements elements_2">
-                        <div class="form_elements_block part_1">
-                            <label for="login">
-                                <p>Как к вам обращаться?</p>
-                            </label>
-                            <div class="form">
-                                <input type="uname" id="login" class="form_input" placeholder="Ваше имя" required name="login">
-                            </div>
-                        </div>
-                        <div class="form_elements_block part_2">
-                            <label for="tel">
-                                <p>Введите телефон</p>
-                            </label>
-                            <div class="form">
-                                <input type="tel" id="tel" class="form_input" placeholder="+ 7 ( _ _ _ ) - _ _ _ - _ _ - _ _" required name="tel" maxlength="17" pattern="\+7\s?[\(]{0,1}9[0-9]{2}[\)]{0,1}\s?\d{3}[-]{0,1}\d{2}[-]{0,1}\d{2}">
-                            </div>
-                        </div>
-                    </div>
-                    <p style="margin-top: 8px;">Перезвоним, чтобы обсудить условия поставки</p>
-                    <input type="submit" class="submit_class" value="Узнать стоимость">
-                </form>
-                <p style="line-height: 16px; margin-top: 8px; font-size: 15px;">Нажимая на кнопку, вы даете согласие на обработку<br> своих персональных данных и соглашаетесь с<br> Политикой конфиденциальности
-                </p>
+                        <p style="margin-top: 8px;">Перезвоним, чтобы обсудить условия поставки</p>
+                        <input type="submit" class="submit_class" value="Узнать стоимость">
+                    </form>
+                    <p style="line-height: 16px; margin-top: 8px; font-size: 15px;">Нажимая на кнопку, вы даете согласие на обработку<br> своих персональных данных и соглашаетесь с<br> Политикой конфиденциальности
+                    </p>
+                </div>
+                <div class="img_block"></div>
             </div>
-            <img src="images/block_background(man).png" alt="man :D" style="margin-bottom: 52px;">
         </div>
         <div class="support_block">
             <div class="support_header">
@@ -356,7 +358,145 @@
                 <h1>Мы продумали всё, чтобы вы могли <br> купить металлопрокат по выгодной цене <br> и с доставкой за 2-3 дня</h1>
             </div>
         </div>
-    </main>
-</body>
+        <div class="delivery_block">
+            <div class="map_info">
+                <h1>Отказались от не разумной логистики <br>
+                    <span> Покупайте металлопрокат в вашем городе</span>
+                </h1>
+                <p>
+                    Раньше мы закупали сырье у различных поставщиков, везли <br> его к себе на базу в Магнитогорске, производили продукцию <br> и после этого отправляли своим клиентам по РФ. Сейчас <br>
+                    у нас есть договоренности с нашими партнерами во всех <br> региональных центрах и производство на аутсорсинге. <br>
+                    Мы так же самостоятельно закупаем металл и производим <br> металлопрокат на производствах наших партнеров
+                </p>
+            </div>
 
-</html>
+            <div class="map_location_block">
+                <div class="map_block-first">
+                    <img src="/images/unavailable.svg" alt="icon" class="map_img-first">
+                    <span class="map_first">Москва</span>
+                    <span class="map_second">Липецк</span>
+                    <span class="map_three">Магниторск</span>
+                    <img src="images/arrow(red)_up.svg" alt="icon" class="map_img-second">
+                    <img src="images/arrow(red)_down.svg" alt="icon" class="map_img-three">
+                </div>
+                <div class="map_block-second">
+                    <img src="images/сheckmark.svg" alt="icon" class="map_img-fourth">
+                    <span class="map_fourth">Москва</span>
+                    <span class="map_fifth">Липецк</span>
+                    <img src="images/arrow(blue).svg" alt="icon" class="map_img-fifth">
+                </div>
+            </div>
+        </div>
+        <div class="producer_block">
+            <div class="producer_map">
+
+                <img src="images/Icon_white.svg" alt="icon">
+                <img src="images/Icon_white.svg" alt="icon">
+                <img src="images/Icon_white.svg" alt="icon">
+                <img src="images/Icon_white.svg" alt="icon">
+                <img src="images/Icon_white.svg" alt="icon">
+                <img src="images/Icon_white.svg" alt="icon">
+                <img src="images/Icon_white.svg" alt="icon">
+                <img src="images/Icon_white.svg" alt="icon">
+                <img src="images/Icon_white.svg" alt="icon">
+                <img src="images/Icon_white.svg" alt="icon">
+                <img src="images/Icon_white.svg" alt="icon">
+                <img src="images/Icon_white.svg" alt="icon">
+                <img src="images/Icon_white.svg" alt="icon">
+                <img src="images/Icon_white.svg" alt="icon">
+                <img src="images/Icon_white.svg" alt="icon">
+                <img src="images/Icon_white.svg" alt="icon">
+                <img src="images/Icon_white.svg" alt="icon">
+
+            </div>
+            <div class="producer_info">
+                <div class="map_info">
+                    <h1>Вы не переплачиваете <br>
+                        <span> Покупайте у производителя </span>
+
+                    </h1>
+                    <p>
+                        Мы точно так же закупаем сырье, например у поставщика <br>
+                        в Липецке и там же заказываем в производство <br> металлопрокат. За счет больших объемов продаж,<br>
+                        мы получаем хорошую скидку и экномим на логистике. <br>
+                        Так мы делаем в 26 крупных городах РФ
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="control_block">
+            <div class="control_info">
+                <div class="map_info">
+                    <h1>
+                        Покупайте качественный металлопрокат <br>
+                        <span>У нас строгие нормы контроля <br>
+                            и требования к производству </span>
+                    </h1>
+                    <p>
+                        Наше собственное производство находится в Магнитогорске. <br>
+                        Мы изготавливаем продукцию строго по ГОСТ и ТЗ. <br>
+                        Дорожим нашей деловой репутацией и требуем качества <br>
+                        от наших партнеров.
+                    </p>
+                </div>
+            </div>
+            <div class="control_image"></div>
+        </div>
+        <div class="project_block">
+            <div class="project_content">
+                <h1>Давайте обсудим <br> ваш проект и <br> подготовим его <br> расчет</h1>
+                <p>
+                    Мы рассчитаем точную стоимость <br>
+                    в течение 24 часов, подскажем, <br>
+                    на чем вы можете сэкономить <br>
+                    и расскажем все о наших возможностях.
+                </p>
+            </div>
+            <div class="project_img">
+                <img src="images/block_bg(man-2).png" alt="man :DD">
+                <div class="project_img-info">
+                    <p>
+                        Если у вас уже есть предложение от другой компании,<br> прикрепите его к форме. Мы дадим свое предложение <br> по наличию, цене и срокам поставки. <br>
+                        <span>Просто попробуйте, уверены, мы вас приятно удивим.</span>
+                    </p>
+                </div>
+            </div>
+            <div class="project_border"></div>
+            <div class="project_form">
+                <h2>
+                    Получите предложение<br>
+                    на поставку металлопроката
+                </h2>
+                <form action="#">
+                    <div class="project_form_position">
+                        <label for="login">
+                            <p>Как к вам обращаться?</p>
+                        </label>
+                        <div class="form">
+                            <input type="uname" id="login" class="form_input" placeholder="Ваше имя" required name="login">
+                        </div>
+                    </div>
+                    <div class="project_form_position">
+
+                        <label for="tel">
+                            <p>Введите телефон</p>
+                        </label>
+                        <div class="form">
+                            <input type="tel" id="tel" class="form_input" placeholder="+ 7 ( _ _ _ ) - _ _ _ - _ _ - _ _" required name="tel" maxlength="17" pattern="\+7\s?[\(]{0,1}9[0-9]{2}[\)]{0,1}\s?\d{3}[-]{0,1}\d{2}[-]{0,1}\d{2}">
+                        </div>
+                    </div>
+
+                    <div class="project_form_position">
+                        <label for="email">
+                            <p>Куда отправить прайс и каталог?</p>
+                        </label>
+                        <div class="form">
+                            <input type="email" id="email" class="form_input" placeholder="E-mail" required name="email">
+                        </div>
+
+                    </div>
+                </form>
+            </div>
+        </div>
+    </main>
+</body></html>
